<resources>
    <string name="app_name">socialParcelDistribution_user</string>
    <string name="enter_full_name">enter full name</string>
    <string name="enter_password">enter password</string>
    <string name="enter_email">enter email</string>
    <string name="sign_in">sign in</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DDB</string>
    <string name="nav_header_subtitle">If you come here anyway, why not take a parcel with you?</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="sign_up">sign up</string>
    <string name="parcels_to_deliver">parcels to deliver</string>
    <string name="my_parcels">my parcels</string>
    <string name="sign_out">sign out</string>
    <string name="menu_suggested_parcels">suggested parcels</string>
    <string name="menu_user_parcels">user parcels</string>
    <string name="suggestOption">Volunteer to deliver the parcel</string>
    <string name="whereIWillGo">Where I will go?</string>
    <string name="enterDestinationAddress">enter destination address</string>
    <string name="maxDistFromCurrentLocation">max distance (in meters) from my location</string>
    <string name="maxDistFromDestination">max distance (in meters) from destination above</string>
    <string name="findReleventParcels">find relevant parcels</string>
    <string name="connected_as">connected as:</string>
    <string name="cancellation">Cancellation of Volunteering</string>
    <string name="enter_phone">enter phone</string>
    <string name="seeSuggestions">see deliver suggestions</string>
    <string name="arrivedParcel">parcel arrived - remove</string>
</resources>



