<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_own_parcels"
            android:icon="@drawable/ic_folder_black_24dp"
            android:title="@string/my_parcels" />
        <item
            android:id="@+id/nav_parcels_for_delivery"
            android:icon="@drawable/ic_airport_shuttle_black_24dp"
            android:title="@string/parcels_to_deliver" />
    </group>
    <item android:title="Login">
        <menu>
            <item
                android:id="@+id/sign_out"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
