<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/linearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="sign in"
        android:id="@+id/bt_sign_in"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="sign up"
        android:id="@+id/bt_sign_up"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="sign out"
        android:id="@+id/bt_sign_out"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_full_name"
        android:id="@+id/et_full_name"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:id="@+id/et_password"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:inputType="textWebEmailAddress"
        android:id="@+id/et_email"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="current user"
        android:id="@+id/user_tv"/>










</LinearLayout>
